# marshmallow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  docker-compose.yaml  pyproject.toml
scripts/: setup.sh  update_data.sh  updatedata.sh  wipe_logs.sh
src/bot/: dataproducer.py  marshmallow.py  run.py
src/bot/adt/: __init__.py  person.py
src/bot/extensions/: assignment.py  auto.py  development.py  information.py  introductions.py  management.py  shenanigans.py
src/bot/settings/: __init__.py  config.py  logging_config.yml
src/bot/utility/: __init__.py  datahandler.py  dataproducer.py  dmaps.py  dutils.py  processor.py
src/marshmallow/: __init__.py  __main__.py  bot.py  models.py
src/marshmallow/adt/: __init__.py  person.py
src/marshmallow/extensions/: __init__.py  affinity.py  assignment.py  auto.py  automation.py  development.py  information.py  introductions.py  management.py  shenanigans.py
src/marshmallow/settings/: .env.example  __init__.py  config.py  logging_config.yml
src/marshmallow/utility/: __init__.py  datahandler.py  dataproducer.py  datawriter.py  dchannels.py  dmaps.py  dutils.py  processor.py
